fix vertical align issue for any table element (matrix, limit, sum, etc..)

--- a/src/css/math.less
+++ b/src/css/math.less
@@ -275,6 +275,7 @@
   .mtable {
     text-align: center;
     display: inline-table;
+    vertical-align: middle;
   }
 
   .mtr {
